--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
 
-  <p class="intro">A gallery of cool space photos built by <a href="https://tristangoodell.com">Tristan Goodell</a>.If you need a website, click <a href="https://tristangoodell.com">here</a>. Enjoy!</p>
+  <p class="intro w3-card">A gallery of cool space photos built by <a href="https://tristangoodell.com">Tristan Goodell</a>.If you need a website, click <a href="https://tristangoodell.com">here</a>. Enjoy!</p>
 
 <div class="" style="padding: 0.5%;padding-bottom: 0;">
 
